3.0.2
* Post-DiFX-2.0.1
* Infrastructure for az, el, parallactic angle in model added
* Tcal managing structures and functions added

3.0.1
* Post DiFX-2.0.0
* All string parameters of difx_input have parameterized lengths
* Get rid of strcpy and strncpy in favor of more friendly snprintf
* Add optional VEX FILE parameter to .calc file
* Introduce new enum SamplingType 
* Add infrastructure for tcalFrequency
* Add DifxStringArray, which will be used for storing scan names and source names in DifxRule blocks
* Clean up, a little bit, the low level writing routines
* Considerable fixes to zoom band support
* Add Remap[] arrays inside DifxJob to account for pre-merged array indices
* Add some accessor functions to return a list of datastreams associated with an antenna.  This will be used to allow multiple datastreams per antenna.
* Add infrastructure to make redhat .rpm file
* Three fixes for ephemeris driven objects: EARTH -> EARTH BARYCENTER to match changed spice nomenclature, move to linear interpolation, and actually    link to spacecraft table from source table
* Version for DiFX-2.0.1, Jun 10, 2011 / updated June 16

3.0
* Includes the following changes merged (hopefully correctly) from the DiFX-1.5 branch;
  - Merge fixes from trunk
  - Add network table infrastructure
  - Load > 1 pulsar polynomial from a file
  - Move flags to DifxJob so combinig multiple subarrays results in accurate
    application of flags.  NOTE: This breaks the API
  - Infrastructure for writing for file-based correlation
  - When sorting antennas, update the scan table (nAntenna, im and model)
  - Fix and simplify DifxInputGetScanIdByAntennaId
  - Fix for parsing of .flag file. 
  - Start some infrastructure for supporting proper flagging in cases of partially
    overlapping scans
  - Add difxcalculator under utils.  This is an implementation of
    http://cira.ivec.org/dokuwiki/lib/exe/fetch.php/difx/difx_calculator.xls
    as a stand-alone program